# atf-protocol-standard

./: CHANGELOG.md  COMPLIANCE-MATRIX.md  CONFORMANCE.md  CONTRIBUTING.md  GOVERNANCE.md  IMPLEMENTATIONS.md  README.md  RFC-ATF-2.md  RFC-ATF-3.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml
atf-conformance-suite/: Dockerfile  README.md  run_conformance.py
atf-conformance-suite/schema/: conformance_result.schema.json
atf-conformance-suite/vectors/: complete_vectors.json
conformance/: conformance_vectors.json
docs/: index.html
docs/conformance/: index.html
docs/diagrams/: index.html
docs/governance/: index.html
docs/integrations/: index.html
docs/quickstart/: index.html
docs/rfc/: index.html
docs/verify/: index.html
docs/whitepaper/: index.html
examples/: delegation_receipt.json  runtime_continuity_record.json  temporal_authority_record.json
integrations/: README.md
integrations/fastapi/: README.md  pyproject.toml
integrations/fastapi/atf_fastapi/: __init__.py  depends.py  exceptions.py  middleware.py  utils.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/atf_langchain/: __init__.py  deps.py  exceptions.py  handler.py  runnable.py  tool.py  utils.py
integrations/openai-agents/: README.md  pyproject.toml
integrations/openai-agents/atf_openai_agents/: __init__.py  exceptions.py  guard.py  handoff.py  hooks.py  utils.py
ports/rust/: Cargo.toml  PORTING_GUIDE.md  README.md
ports/rust/src/: hash.rs  lib.rs  main.rs  types.rs
ports/rust/tests/: conformance.rs
ports/typescript/: README.md  package.json  tsconfig.json
ports/typescript/src/: ces.ts  cli.ts  hash.ts  index.ts  types.ts  verifier.ts
ports/typescript/tests/: verifier.test.ts
reference-implementation/: README.md  pyproject.toml  smoke_test.py
reference-implementation/atf_core/: __init__.py  receipts.py  verifier.py
schemas/: delegation_receipt.schema.json  runtime_continuity_record.schema.json
tests/: test_atf_receipts.py  test_conformance_vectors.py  test_hash_parity.py  test_threat_model.py
verifier/: verify_oep_package.py  verify_receipt.py
