[build-system]
  requires = ["setuptools>=61"]
  build-backend = "setuptools.backends.legacy:build"

  [project]
  name = "atf-core"
  version = "1.0.0"
  description = "ATF Protocol Reference Implementation — RFC-ATF-1 / RFC-ATF-2"
  readme = "README.md"
  license = {text = "CC-BY-4.0"}
  requires-python = ">=3.9"
  dependencies = []

  [project.optional-dependencies]
  pqc = ["pypqc>=0.0.8"]
  test = ["pytest>=7"]

  [project.urls]
  "Protocol Standard" = "https://github.com/Costenho19/atf-protocol-standard"
  "OMNIX QUANTUM" = "https://omnixquantum.com"
  